--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -125,7 +125,7 @@
 <ol><li>Mezi koncov&yacute;mi body vybran&eacute; p&#345;&iacute;mky se zobraz&iacute; rozm&#283;r. Tento rozm&#283;r p&#345;edstavuje aktu&aacute;ln&iacute; d&eacute;lku.</li>
 <li>Nav&iacute;c se zobraz&iacute; dialogov&eacute; okno:<br><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pd_tut_rect03.png&amp;filetimestamp=20221214114118&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_rect03.png" decoding="async" width="305" height="169" class="mw-file-element" data-file-width="305" data-file-height="169"></a></span></li>
 <li>P&#345;i&#345;a&#271;te <b>D&eacute;lka = 53 mm</b>.</li>
-<li>Aby bylo mo&#382;n&eacute; na tento rozm&#283;r pozd&#283;ji odkazovat, je nutn&eacute; mu p&#345;i&#345;adit n&aacute;zev. M&#367;&#382;ete pou&#382;&iacute;t libovoln&yacute; n&aacute;zev, mus&iacute; b&yacute;t pouze jedine&#269;n&yacute; v r&aacute;mci v&yacute;kresu. P&#345;i&#345;a&#271;te <b>N&aacute;zev = d&eacute;lka</b>.</li>
+<li>Aby bylo mo&#382;n&eacute; na tento rozm&#283;r pozd&#283;ji odkazovat, je nutn&eacute; mu p&#345;i&#345;adit n&aacute;zev. M&#367;&#382;ete pou&#382;&iacute;t libovoln&yacute; n&aacute;zev, mus&iacute; b&yacute;t pouze jedine&#269;n&yacute; v r&aacute;mci v&yacute;kresu. P&#345;i&#345;a&#271;te <b>N&aacute;zev = sirka</b>.</li>
 <li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
 <li>V&yacute;sledek by m&#283;l vypadat takto <b>Obr.: MS4</b></li></ol>
 <p><b>Krok D: P&#345;i&#345;azen&iacute; symetrick&eacute; vazby</b>
@@ -405,12 +405,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120174459
+Cached time: 20260120174638
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.279 seconds
-Real time usage: 1.226 seconds
+CPU time usage: 0.268 seconds
+Real time usage: 1.151 seconds
 Preprocessor visited node count: 833/1000000
 Post&#8208;expand include size: 41806/2097152 bytes
 Template argument size: 11566/2097152 bytes
@@ -421,19 +421,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  172.385      1 -total
- 20.40%   35.175      1 Template:PartDesign_Tools_navi/cs
- 19.78%   34.095      1 Template:Userdocnavi/cs
- 10.95%   18.884      1 Template:TutorialInfo
- 10.50%   18.100      3 Template:Navigation_menu_2
-  9.40%   16.197      1 Template:Sketcher_Tools_navi/cs
-  7.80%   13.438      5 Template:Clear
-  6.68%   11.511      1 Template:Version
-  6.33%   10.913     19 Template:Button
-  5.81%   10.008      7 Template:ComboBox
+100.00%  181.274      1 -total
+ 23.23%   42.109      1 Template:PartDesign_Tools_navi/cs
+ 14.35%   26.010      1 Template:Userdocnavi/cs
+ 11.48%   20.817      5 Template:Clear
+ 11.12%   20.149      1 Template:Version
+ 10.68%   19.367      1 Template:Sketcher_Tools_navi/cs
+ 10.48%   19.004      3 Template:Navigation_menu_2
+  8.45%   15.326      7 Template:ComboBox
+  7.35%   13.320      1 Template:TutorialInfo
+  5.65%   10.240      3 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120174457 and revision id 1741634. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120174637 and revision id 1741636. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
