--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -184,7 +184,7 @@
 <li>Kliknut&iacute;m na tla&#269;&iacute;tko <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> zav&#345;ete dialogov&eacute; okno <b>Vlo&#382;it d&eacute;lku</b>.</li></ol></li>
 <li>M&#283;li byste m&iacute;t pln&#283; zavazben&yacute; n&aacute;&#269;rt podobn&yacute; <b>Obr.: MP2</b>.</li>
 <li>V&scaron;imn&#283;te si rozd&iacute;ln&yacute;ch barev pou&#382;it&yacute;ch pro vazby vzd&aacute;lenosti p&#345;i&#345;azen&aacute; pomoc&iacute; v&yacute;raz&#367; a pro vazby vzd&aacute;lenosti p&#345;i&#345;azen&aacute; zad&aacute;n&iacute;m d&eacute;lky.</li></ol>
-<p><b>Step D: Close the sketch</b>
+<p><b>Krok F: Zav&#345;en&iacute; n&aacute;&#269;rtu</b>
 </p>
 <dl><dd>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span> at the top of the <a href="../Task_panel.html" class="mw-redirect" title="Task panel">tasks panel</a> to leave sketch edit mode.</dd></dl>
 <p><b><big>Pad</big></b>
@@ -405,12 +405,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120174723
+Cached time: 20260120174835
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.311 seconds
-Real time usage: 1.494 seconds
+CPU time usage: 0.297 seconds
+Real time usage: 1.395 seconds
 Preprocessor visited node count: 833/1000000
 Post&#8208;expand include size: 41806/2097152 bytes
 Template argument size: 11566/2097152 bytes
@@ -421,19 +421,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  199.854      1 -total
- 24.70%   49.370      1 Template:Sketcher_Tools_navi/cs
- 17.23%   34.437      1 Template:PartDesign_Tools_navi/cs
- 15.83%   31.641      3 Template:Navigation_menu_2
-  8.04%   16.075      3 Template:CheckBox
-  7.79%   15.559     19 Template:Button
-  7.60%   15.186      5 Template:Clear
-  7.16%   14.319      1 Template:TutorialInfo
-  6.85%   13.681      7 Template:ComboBox
-  6.08%   12.149      8 Template:KEY
+100.00%  146.514      1 -total
+ 26.19%   38.370      1 Template:PartDesign_Tools_navi/cs
+ 25.00%   36.625      3 Template:Navigation_menu_2
+ 19.29%   28.264      1 Template:Sketcher_Tools_navi/cs
+ 15.16%   22.218      1 Template:Userdocnavi/cs
+  7.92%   11.601      5 Template:Clear
+  7.68%   11.255      1 Template:TutorialInfo
+  4.62%    6.762      7 Template:ComboBox
+  4.46%    6.529      3 Template:CheckBox
+  4.30%    6.300      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120174721 and revision id 1741638. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120174833 and revision id 1741640. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
