--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -187,7 +187,7 @@
 <p><b>Krok F: Zav&#345;en&iacute; n&aacute;&#269;rtu</b>
 </p>
 <dl><dd>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span> v horn&iacute; &#269;&aacute;sti <a href="../Task_panel.html" class="mw-redirect" title="Task panel">panelu &uacute;kol&#367;</a> pro opu&scaron;t&#283;n&iacute; re&#382;imu &uacute;prav n&aacute;&#269;rtu.</dd></dl>
-<p><b><big>Pad</big></b>
+<p><b><big>Deska</big></b>
 </p>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_pad1.png&amp;filetimestamp=20221022092255&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_pad1.png" decoding="async" width="240" height="218" class="mw-file-element" data-file-width="550" data-file-height="500"></a><figcaption>Fig: MP3</figcaption></figure>
 <ol><li>Make sure <b>Sketch001</b> is selected.</li>
@@ -405,12 +405,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120174942
+Cached time: 20260120175029
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.295 seconds
-Real time usage: 0.881 seconds
+CPU time usage: 0.339 seconds
+Real time usage: 1.557 seconds
 Preprocessor visited node count: 833/1000000
 Post&#8208;expand include size: 41809/2097152 bytes
 Template argument size: 11569/2097152 bytes
@@ -421,19 +421,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   99.492      1 -total
- 18.75%   18.656      3 Template:CheckBox
- 18.71%   18.616      1 Template:PartDesign_Tools_navi/cs
- 16.90%   16.816      3 Template:Navigation_menu_2
- 16.22%   16.140      1 Template:Sketcher_Tools_navi/cs
- 11.99%   11.929      1 Template:TutorialInfo
- 11.58%   11.521      1 Template:Userdocnavi/cs
- 10.01%    9.957      5 Template:Clear
-  2.51%    2.499      1 Template:Version
-  2.44%    2.431     19 Template:Button
+100.00%  179.394      1 -total
+ 25.33%   45.439      1 Template:Sketcher_Tools_navi/cs
+ 24.33%   43.647      3 Template:Navigation_menu_2
+ 15.46%   27.734      1 Template:PartDesign_Tools_navi/cs
+ 12.30%   22.070      1 Template:Userdocnavi/cs
+  8.23%   14.762      7 Template:ComboBox
+  7.19%   12.897      1 Template:Version
+  5.64%   10.120     19 Template:Button
+  5.43%    9.734      1 Template:TutorialInfo
+  5.08%    9.120      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120174941 and revision id 1741642. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120175029 and revision id 1741644. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
