--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -190,14 +190,14 @@
 <p><b><big>Deska</big></b>
 </p>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_pad1.png&amp;filetimestamp=20221022092255&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_pad1.png" decoding="async" width="240" height="218" class="mw-file-element" data-file-width="550" data-file-height="500"></a><figcaption>Fig: MP3</figcaption></figure>
-<ol><li>Make sure <b>Sketch001</b> is selected.</li>
-<li>Click <span typeof="mw:File"><a href="../PartDesign_Pad.html" title="PartDesign Pad"><img src="../File/PartDesign_Pad.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Pad</a>:
-<ol><li>The <b>Pad parameters</b> task panel opens.</li>
-<li>For <b>Type</b> select <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Dimension  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>.</li>
-<li>For <b>Length</b> again use an expression, but this time enter <b><code>&lt;&lt;Sketch&gt;&gt;.Constraints.length</code></b>. This should evaluate to 53 mm.</li>
-<li>Select <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxTrue.svg&amp;filetimestamp=20200323161507&amp;.html" class="mw-file-description"><img src="../File/CheckBoxTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Symmetric to plane<span></span></span>.</li>
-<li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> to close the task panel.</li></ol></li>
-<li>You should now have a solid as shown in <b>Fig: MP3</b>.</li></ol>
+<ol><li>Ujist&#283;te se, &#382;e je vybr&aacute;n <b>Sketch001</b>.</li>
+<li>Klikn&#283;te na <span typeof="mw:File"><a href="../PartDesign_Pad.html" title="PartDesign Pad"><img src="../File/PartDesign_Pad.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Deska</a>:
+<ol><li>Otev&#345;e se panel <b>Parametry desky</b>.</li>
+<li>Jako <b>Typ</b> vyberte <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Rozm&#283;r  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>.</li>
+<li>Jako <b>D&eacute;lka</b> op&#283;t pou&#382;ijte v&yacute;raz, ale tentokr&aacute;t zadejte <b><code>&lt;&lt;Sketch&gt;&gt;.Constraints.length</code></b>. V&yacute;sledek by m&#283;l b&yacute;t 53 mm.</li>
+<li>Vyberte <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxTrue.svg&amp;filetimestamp=20200323161507&amp;.html" class="mw-file-description"><img src="../File/CheckBoxTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Symmetrick&yacute; k rovin&#283;<span></span></span>.</li>
+<li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> pro zav&#345;en&iacute; panelu &uacute;kol&#367;.</li></ol></li>
+<li>Nyn&iacute; byste m&#283;li m&iacute;t pevn&eacute; t&#283;leso, jak je zn&aacute;zorn&#283;no na <b>Obr.: MP3</b>.</li></ol>
 <div style="clear:both"></div>
 <h2><span class="mw-headline" id="Corner_cutouts">Corner cutouts</span></h2>
 <p>For the corner cutouts two features are added to the model. A <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">pocket</a>, based on another sketch, is used to create the first cutout, and this feature is then <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">mirrored</a>.
@@ -405,15 +405,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120175029
+Cached time: 20260120180000
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.339 seconds
-Real time usage: 1.557 seconds
+CPU time usage: 0.315 seconds
+Real time usage: 1.650 seconds
 Preprocessor visited node count: 833/1000000
-Post&#8208;expand include size: 41809/2097152 bytes
-Template argument size: 11569/2097152 bytes
+Post&#8208;expand include size: 41811/2097152 bytes
+Template argument size: 11567/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -421,19 +421,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  179.394      1 -total
- 25.33%   45.439      1 Template:Sketcher_Tools_navi/cs
- 24.33%   43.647      3 Template:Navigation_menu_2
- 15.46%   27.734      1 Template:PartDesign_Tools_navi/cs
- 12.30%   22.070      1 Template:Userdocnavi/cs
-  8.23%   14.762      7 Template:ComboBox
-  7.19%   12.897      1 Template:Version
-  5.64%   10.120     19 Template:Button
-  5.43%    9.734      1 Template:TutorialInfo
-  5.08%    9.120      5 Template:Clear
+100.00%  230.580      1 -total
+ 38.73%   89.294      1 Template:Sketcher_Tools_navi/cs
+ 27.75%   63.978      3 Template:Navigation_menu_2
+ 15.54%   35.835      1 Template:PartDesign_Tools_navi/cs
+  8.46%   19.506      1 Template:Userdocnavi/cs
+  8.04%   18.548      1 Template:TutorialInfo
+  7.59%   17.496      7 Template:ComboBox
+  5.14%   11.851      8 Template:KEY
+  4.98%   11.478      5 Template:Clear
+  3.62%    8.338     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120175029 and revision id 1741644. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120175958 and revision id 1741647. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
