--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -243,7 +243,7 @@
 <li>M&#283;li byste m&iacute;t pln&#283; zavazben&yacute; n&aacute;&#269;rt podobn&yacute; <b>Obr.: CC3</b>.</li></ol>
 <p><b>Krok H: Ukon&#269;en&iacute; n&aacute;&#269;rtu</b>
 </p>
-<dl><dd>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span>.</dd></dl>
+<dl><dd>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span>.</dd></dl>
 <p><b><big>Pocket</big></b>
 </p>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_pck01.png&amp;filetimestamp=20221104163023&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_pck01.png" decoding="async" width="300" height="265" class="mw-file-element" data-file-width="370" data-file-height="327"></a><figcaption>Fig: CC4</figcaption></figure>
@@ -407,15 +407,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120192622
+Cached time: 20260120192641
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.359 seconds
-Real time usage: 1.649 seconds
+CPU time usage: 0.286 seconds
+Real time usage: 0.611 seconds
 Preprocessor visited node count: 829/1000000
-Post&#8208;expand include size: 41756/2097152 bytes
-Template argument size: 11564/2097152 bytes
+Post&#8208;expand include size: 41759/2097152 bytes
+Template argument size: 11567/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  180.369      1 -total
- 25.13%   45.323      1 Template:PartDesign_Tools_navi/cs
- 20.44%   36.876      1 Template:Userdocnavi/cs
-  9.73%   17.559      1 Template:Sketcher_Tools_navi/cs
-  9.23%   16.644      3 Template:Navigation_menu_2
-  7.19%   12.977      3 Template:CheckBox
-  6.76%   12.186     19 Template:Button
-  6.18%   11.142      1 Template:Verze
-  5.52%    9.958      7 Template:ComboBox
-  5.47%    9.873      5 Template:Clear
+100.00%   51.035      1 -total
+ 18.27%    9.322      1 Template:Sketcher_Tools_navi/cs
+ 18.12%    9.248      1 Template:Userdocnavi/cs
+ 16.88%    8.617      1 Template:PartDesign_Tools_navi/cs
+ 14.03%    7.160      3 Template:Navigation_menu_2
+  9.76%    4.979      8 Template:KEY
+  7.81%    3.985     19 Template:Button
+  6.94%    3.540      7 Template:ComboBox
+  5.22%    2.664      3 Template:CheckBox
+  4.83%    2.465      1 Template:TutorialInfo
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120192620 and revision id 1741683. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120192640 and revision id 1741685. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
