--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -248,7 +248,7 @@
 </p>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_pck01.png&amp;filetimestamp=20221104163023&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_pck01.png" decoding="async" width="300" height="265" class="mw-file-element" data-file-width="370" data-file-height="327"></a><figcaption>Fig: CC4</figcaption></figure>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_pck02-mir.png&amp;filetimestamp=20221104164346&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_pck02-mir.png" decoding="async" width="300" height="257" class="mw-file-element" data-file-width="369" data-file-height="316"></a><figcaption>Fig: CC5</figcaption></figure>
-<p>To create the cutouts we will use the <span typeof="mw:File"><a href="../PartDesign_Pocket.html" title="PartDesign Pocket"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Pocket</a> tool. This tool is the opposite of the Pad tool. Whereas the Pad tool adds material, the Pocket tool removes material.
+<p>K vytvo&#345;en&iacute; v&yacute;&#345;ez&#367; pou&#382;ijeme n&aacute;stroj <span typeof="mw:File"><a href="../PartDesign_Pocket.html" title="PartDesign Pocket"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Kapsa</a>. Tento n&aacute;stroj je opakem n&aacute;stroje Deska. Zat&iacute;mco n&aacute;stroj Deska materi&aacute;l p&#345;id&aacute;v&aacute;, n&aacute;stroj Kapsa materi&aacute;l odstra&#328;uje.
 </p>
 <ol><li>Select <b>Sketch002</b>.</li>
 <li>Click <span typeof="mw:File"><a href="../PartDesign_Pocket.html" title="PartDesign Pocket"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Pocket</a>:
@@ -407,12 +407,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120192811
+Cached time: 20260120192957
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.311 seconds
-Real time usage: 1.537 seconds
+CPU time usage: 0.306 seconds
+Real time usage: 1.500 seconds
 Preprocessor visited node count: 829/1000000
 Post&#8208;expand include size: 41759/2097152 bytes
 Template argument size: 11567/2097152 bytes
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  183.005      1 -total
- 26.29%   48.117      1 Template:PartDesign_Tools_navi/cs
- 15.81%   28.925      3 Template:Navigation_menu_2
- 11.91%   21.790      1 Template:Userdocnavi/cs
- 11.88%   21.739      1 Template:Sketcher_Tools_navi/cs
-  8.96%   16.400     19 Template:Button
-  7.96%   14.575      7 Template:ComboBox
-  5.43%    9.935      3 Template:CheckBox
-  5.19%    9.492      5 Template:Clear
-  4.55%    8.329      8 Template:KEY
+100.00%  168.641      1 -total
+ 23.55%   39.714      1 Template:PartDesign_Tools_navi/cs
+ 20.40%   34.411      1 Template:Sketcher_Tools_navi/cs
+ 18.72%   31.571      1 Template:Userdocnavi/cs
+  8.53%   14.390      1 Template:TutorialInfo
+  8.11%   13.674      3 Template:Navigation_menu_2
+  6.42%   10.824      7 Template:ComboBox
+  5.40%    9.115      5 Template:Clear
+  4.48%    7.547      3 Template:CheckBox
+  4.15%    7.004     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120192809 and revision id 1741687. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120192955 and revision id 1741689. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
