--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -258,7 +258,7 @@
 <li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
 <li>M&#283;li byste m&iacute;t n&#283;co, co se podob&aacute; <b>Obr.: CC4</b></li></ol>
 <p><b><big>Zrcadlen&iacute;</big></b>
-</p><p>Instead of creating another sketch and pocketing it, we take advantage of the model's symmetry about the YZ plane and use <span typeof="mw:File"><a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored"><img src="../File/PartDesign_Mirrored.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">Mirrored</a> to create the second cutout.
+</p><p>M&iacute;sto toho, abychom vytvo&#345;ili dal&scaron;&iacute; n&aacute;&#269;rt a ulo&#382;ili ho, vyu&#382;ijeme symetrii modelu ohledn&#283; roviny YZ a pomoc&iacute; <span typeof="mw:File"><a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored"><img src="../File/PartDesign_Mirrored.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">Zrcadlit</a> vytvo&#345;&iacute;me druh&yacute; v&yacute;&#345;ez.
 </p>
 <ol><li>Select <b>Pocket</b> in the <a href="../Tree_view.html" class="mw-redirect" title="Tree view">Tree view</a>.</li>
 <li>Click <span typeof="mw:File"><a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored"><img src="../File/PartDesign_Mirrored.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">Mirrored</a>:
@@ -407,12 +407,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120193534
+Cached time: 20260120193703
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.285 seconds
-Real time usage: 0.420 seconds
+CPU time usage: 0.321 seconds
+Real time usage: 0.905 seconds
 Preprocessor visited node count: 829/1000000
 Post&#8208;expand include size: 41757/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.179      1 -total
- 23.15%    9.534      3 Template:Navigation_menu_2
- 20.67%    8.511      1 Template:PartDesign_Tools_navi/cs
- 20.60%    8.484      1 Template:Sketcher_Tools_navi/cs
- 15.38%    6.333      1 Template:Userdocnavi/cs
-  7.40%    3.049      3 Template:CheckBox
-  7.21%    2.968      1 Template:TutorialInfo
-  6.06%    2.497      7 Template:ComboBox
-  4.77%    1.965     19 Template:Button
-  4.12%    1.698      8 Template:KEY
+100.00%   86.607      1 -total
+ 27.93%   24.186      1 Template:PartDesign_Tools_navi/cs
+ 20.73%   17.953      1 Template:Userdocnavi/cs
+ 11.57%   10.018      1 Template:Sketcher_Tools_navi/cs
+  9.64%    8.348      3 Template:Navigation_menu_2
+  9.54%    8.263      7 Template:ComboBox
+  5.71%    4.946      5 Template:Clear
+  4.15%    3.592     19 Template:Button
+  3.62%    3.131      3 Template:CheckBox
+  3.42%    2.963      1 Template:Verze
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120193533 and revision id 1741693. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120193702 and revision id 1741695. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
