--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -260,12 +260,12 @@
 <p><b><big>Zrcadlen&iacute;</big></b>
 </p><p>M&iacute;sto toho, abychom vytvo&#345;ili dal&scaron;&iacute; n&aacute;&#269;rt a ulo&#382;ili ho, vyu&#382;ijeme symetrii modelu ohledn&#283; roviny YZ a pomoc&iacute; <span typeof="mw:File"><a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored"><img src="../File/PartDesign_Mirrored.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">Zrcadlit</a> vytvo&#345;&iacute;me druh&yacute; v&yacute;&#345;ez.
 </p>
-<ol><li>Select <b>Pocket</b> in the <a href="../Tree_view.html" class="mw-redirect" title="Tree view">Tree view</a>.</li>
-<li>Click <span typeof="mw:File"><a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored"><img src="../File/PartDesign_Mirrored.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">Mirrored</a>:
-<ol><li>The <b>Mirrored parameters</b> task panel opens.</li>
-<li>Select <b>Plane</b> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Vertical sketch axis  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> from the pulldown menu. The plane will be defined by this axis (the Y axis) and also by the Z axis of the sketch. Note that selecting <b>Base YZ Plane</b> would have the same result.</li>
-<li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
-<li>You should now have a part that looks like <b>Fig: CC5</b>.</li></ol>
+<ol><li>Ve <a href="../Tree_view.html" class="mw-redirect" title="Tree view">stromov&eacute;m zobrazen&iacute;</a> vyberte polo&#382;ku <b>Pocket</b>.</li>
+<li>Klikn&#283;te na <span typeof="mw:File"><a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored"><img src="../File/PartDesign_Mirrored.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">Zrcadlit</a>:
+<ol><li>Otev&#345;e se panel <b>Parametry zrcadlen&iacute;</b>.</li>
+<li>Z rozbalovac&iacute;ho menu <b>Rovina</b> vyberte <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Vertik&aacute;ln&iacute; osa n&aacute;&#269;rtu  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>. Rovina bude definov&aacute;na touto osou (osa Y) a tak&eacute; osou Z n&aacute;&#269;rtu. Upozor&#328;ujeme, &#382;e v&yacute;b&#283;r <b>Z&aacute;kladn&iacute; rovina YZ</b> by m&#283;l stejn&yacute; v&yacute;sledek.</li>
+<li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
+<li>Nyn&iacute; byste m&#283;li m&iacute;t d&iacute;l, kter&yacute; vypad&aacute; asi n&aacute;sledovn&#283; <b>Obr.: CC5</b>.</li></ol>
 <div style="clear:both"></div>
 <h2><span class="mw-headline" id="Sides">Sides</span></h2>
 <p>The sides are created in a similar manner, but instead of removing material we will add material with a <a href="../PartDesign_Pad.html" title="PartDesign Pad">pad</a> feature.
@@ -407,15 +407,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120193703
+Cached time: 20260120194727
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.321 seconds
-Real time usage: 0.905 seconds
+CPU time usage: 0.282 seconds
+Real time usage: 1.352 seconds
 Preprocessor visited node count: 829/1000000
-Post&#8208;expand include size: 41757/2097152 bytes
-Template argument size: 11563/2097152 bytes
+Post&#8208;expand include size: 41772/2097152 bytes
+Template argument size: 11578/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   86.607      1 -total
- 27.93%   24.186      1 Template:PartDesign_Tools_navi/cs
- 20.73%   17.953      1 Template:Userdocnavi/cs
- 11.57%   10.018      1 Template:Sketcher_Tools_navi/cs
-  9.64%    8.348      3 Template:Navigation_menu_2
-  9.54%    8.263      7 Template:ComboBox
-  5.71%    4.946      5 Template:Clear
-  4.15%    3.592     19 Template:Button
-  3.62%    3.131      3 Template:CheckBox
-  3.42%    2.963      1 Template:Verze
+100.00%  118.541      1 -total
+ 22.37%   26.522      1 Template:PartDesign_Tools_navi/cs
+ 21.50%   25.484      1 Template:Sketcher_Tools_navi/cs
+ 17.73%   21.014      3 Template:Navigation_menu_2
+ 13.23%   15.682      1 Template:Userdocnavi/cs
+  5.77%    6.837      7 Template:ComboBox
+  5.75%    6.819     19 Template:Button
+  5.41%    6.415      1 Template:TutorialInfo
+  5.25%    6.226      3 Template:CheckBox
+  4.21%    4.994      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120193702 and revision id 1741695. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120194726 and revision id 1741697. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
